@@ -130,6 +130,9 @@ GdkPixbuf*
 gtk_image_get_pixbuf (image)
 	GtkImage *image
 
+=for apidoc
+=signature (stock_id, icon_size) = $image->get_stock
+=cut
 void
 gtk_image_get_stock (image)
 	GtkImage *image
