@@ -237,6 +237,10 @@ pango_font_get_metrics (font, language)
 MODULE = Gtk2::Pango::Font	PACKAGE = Gtk2::Pango::FontFamily	PREFIX = pango_font_family_
 
 ## void pango_font_family_list_faces (PangoFontFamily *family, PangoFontFace ***faces, int *n_faces)
+=for apidoc
+Lists the different font faces that make up family. The faces in a family
+share a common design, but differ in slant, weight, width and other aspects.
+=cut
 void
 pango_font_family_list_faces (family)
 	PangoFontFamily *family
